Starlarkify some java runtime tests and one common test.
PiperOrigin-RevId: 880883085
Change-Id: If61f2e2acabafb590d9d8c7a968e1dc66172d52b